tests/miniJava/neg/003415_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java length [ 0 ] = 0 ; } }
